# clorch

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/clorch/: __init__.py  __main__.py  cli.py  config.py  constants.py  rules.py
src/clorch/hooks/: event_handler.sh  installer.py  notify_handler.sh
src/clorch/notifications/: bell.py  macos.py
src/clorch/state/: history.py  manager.py  models.py  watcher.py
src/clorch/terminal/: apple_terminal.py  backend.py  ghostty.py  iterm.py
src/clorch/tmux/: navigator.py  session.py  statusbar.py
src/clorch/tui/: app.py  app.tcss
src/clorch/tui/widgets/: action_queue.py  agent_detail.py  agent_table.py  context_footer.py  event_log.py  header_bar.py  session_list.py  settings_panel.py  status_bar.py  telemetry_panel.py
src/clorch/usage/: models.py  parser.py
tests/: conftest.py  test_constants.py  test_event_handler_pipefail.py  test_event_handler_subagent.py  test_event_log.py  test_history_resolver.py  test_hook_installer.py  test_jump_to_session.py  test_jump_to_tmux_tab.py  test_models.py  test_open_tmux_tab.py  test_rules.py  test_session_list_colors.py  test_state_manager.py  test_subagent_info.py  test_subagent_rendering.py  test_terminal_backends.py  test_tmux_session.py  test_usage_models.py  test_usage_parser.py  test_usage_tracker.py  test_watcher_snapshot.py
