[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clorch"
version = "0.2.0"
description = "Orchestrator dashboard for multiple Claude Code sessions in tmux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "michil" }]
keywords = ["claude", "tmux", "orchestrator", "tui", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.85.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rich = [
    "rich",
]

[project.scripts]
clorch = "clorch.cli:main"

[project.urls]
Homepage = "https://github.com/androsovm/clorch"
Repository = "https://github.com/androsovm/clorch"

[tool.hatch.build.targets.wheel]
packages = ["src/clorch"]

[tool.hatch.build.targets.sdist]
include = ["src/clorch/**/*.py", "src/clorch/**/*.sh", "src/clorch/**/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
